Login page done

--- a/startbootstrap-sb-admin-2-gh-pages/scss/_variables.scss
+++ b/startbootstrap-sb-admin-2-gh-pages/scss/_variables.scss
@@ -76,6 +76,6 @@ $dropdown-font-size: 0.85rem !default;
 $dropdown-border-color: $border-color !default;
 
 // Images
-$login-image: 'https://source.unsplash.com/K4mSJ7kc0As/600x800' !default;
+$login-image: 'https://images.unsplash.com/photo-1506521781263-d8422e82f27a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80' !default;
 $register-image: 'https://source.unsplash.com/Mv9hjnEUHR4/600x800' !default;
 $password-image: 'https://source.unsplash.com/oWTW-jNGl9I/600x800' !default;
