--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,4 +92,10 @@
     background-size: cover;
 }
 
+.navbar-vertical .navbar-brand-img, .navbar-vertical .navbar-brand > img
+{
+    max-width: 100%;
+    max-height: 4rem;
+}
+
 
