--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,10 +92,35 @@
     background-size: cover;
 }
 
+.validAlert{
+    color: red;
+}
+
+.navbar-brand {
+    font-size: 1.25rem;
+    line-height: inherit;
+    display: inline-block;
+    margin-right: 1rem;
+    padding:0rem;
+    white-space: nowrap;
+}
+
+.sidenav{
+    padding: 0rem ;
+}
+
 .navbar-vertical .navbar-brand-img, .navbar-vertical .navbar-brand > img
 {
     max-width: 100%;
     max-height: 4rem;
 }
 
-
+.editbanner{
+    position: absolute;
+    left: 50%;
+    max-width: 140px;
+    /*transition: all .15s ease;*/
+    transform: translate(-50%, -50%) scale(1);
+    font-size: 50px;
+    opacity: 0;
+}
