--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,6 +111,7 @@
 
 .navbar-vertical .navbar-brand-img, .navbar-vertical .navbar-brand > img
 {
+    padding:0rem;
     max-width: 100%;
     max-height: 4rem;
 }
